--- a/index.html
+++ b/index.html
@@ -38,15 +38,20 @@ function Upgrade(){
  }
 }
 </script>
-<h1>Simple Increment</h1>
+
+<head>
+<center><h1>Simple Increment</h1></center>
+</head>
+<div id="contents">
 <button onclick="Click();" id="myBtn">Click</button>
 <pr>
 <p id="click">Clicks:</p>
 <hr>
 <h3>Upgrades</h3>
 <pr>
-<div id=upgrade>
+<div id="upgrade">
 <button onclick="Upgrade();" id="upg">+1 Clicks</button>
 <pr>
 <p id="pr_up">Price: 5</p>
 </div>
+  </div>
