--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function Upgrade(){
 
 <head>
 <center><h1>Simple Increment</h1></center>
-  <link href="/style.css" rel="stylesheet" type="text/css">
+  <link href="/increment/style.css" rel="stylesheet" type="text/css">
 </head>
 <div id="contents">
 <button onclick="Click();" id="myBtn">Click</button>
