--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 var x = 0;
 var upg_amount=1;
 var price=5;
-Cookies.get('x');
+
 
 function Click() {
   x = x+upg_amount;
@@ -73,7 +73,12 @@ Cookies.set('savedclicks', x);
 </div>
   <hr>
 <button onclick="Save();" id="sav">Save</button>
+ 
 
   
   </div>
+  <script type="text/javascript">
+     Cookies.get('x');
+  </script>
+
   
