--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>Simple Increment</title>
 <script src="/path/to/js.cookie.js"></script>
-
+<link rel="shortcut icon" href="favicon.ico">
 <script>
 var x = 0;
 var upg_amount=1;
