--- a/index.html
+++ b/index.html
@@ -4,34 +4,19 @@
 var x = 0;
 var upg_amount=1;
 var price=5;
+  
 x = getCookie("savedclicks");
 upg_amount = getCookie("savedupgrade");
+price = getCookie("savedupgprice");
+
+document.getElementById("click").innerHTML = "Clicks: "+ x;  
+document.getElementById("pr_up").innerHTML = "Price: "+ price;  
 
 function Click() {
   x = x+upg_amount;
   document.getElementById("click").innerHTML = "Clicks: "+ x;  
 }
-  
-  
-function Upgrade1(){
- if(x>= 20){
-  document.getElementById("upg1").disabled = true;
-   upg_amount=upg_amount+1;
-   x=x-20;
-   document.getElementById("click").innerHTML = "Clicks: "+ x;  
- }else{
-    alert("You don't have enough clicks to get this upgrade.");
- }
-}
-function Upgrade2(){
- if(x>= 50){
-  document.getElementById("upg2").disabled = true;
-   upg_amount=upg_amount+2;
-   x=x-50;
-   document.getElementById("click").innerHTML = "Clicks: "+ x;  
- }else{
-    alert("You don't have enough clicks to get this upgrade.");
- }
+ 
 }
 function Upgrade(){
  if(x>= price){
@@ -47,7 +32,8 @@ function Upgrade(){
   
 function Save(){
 Cookies.set('savedclicks', x);
-  Cookies.set('savedupgrade', upg_amount);
+Cookies.set('savedupgrade', upg_amount);
+  Cookies.set('savedupgprice', price);
 }
 
 
