--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Cookies.set('savedupgrade', upg_amount);
   <link href="/increment/style.css" rel="stylesheet" type="text/css">
 </head>
 <div id="contents">
+  <h2>This site uses cookies to save your clicks and other stuff!</h2>
 <button onclick="Click();" id="myBtn">Click</button>
 <pr>
 <p id="click">Clicks:</p>
@@ -63,10 +64,11 @@ Cookies.set('savedupgrade', upg_amount);
 </div>
   <hr>
 <button onclick="Save();" id="sav">Save</button>
+  <button onclick="Load();" id="sav">Load</button>
  
 
   
   </div>
 
-<script>Load();</script>
+
   
