--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <button onclick="Save();" id="sav">Save</button>
   <button onclick="Load();" id="load">Load</button>
 </div>
-<script src="/path/to/js.cookie.js"></script>
+<script src="https://sjrnoodles.github.io/increment/js.cookie.js"></script>
 <script>
 
 var clicks = 0;
