--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ Cookies.set('savedupgrade', upg);
 Cookies.set('savedupgprice', price);
 }
 function Load(){
-x = getCookie("savedclicks");
-upg_amount = getCookie("savedupgrade");
+clicks = getCookie("savedclicks");
+upg = getCookie("savedupgrade");
 price = getCookie("savedupgprice");
   document.getElementById("click").innerHTML = "Clicks: "+ clicks;  
 document.getElementById("priceupg").innerHTML = "Price: "+ price; 
